force-app/main/default/objects/Dynamic_Search_Data__mdt/Dynamic_Search_Data__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is created for storing the column data</description>
    <label>Dynamic Search Data</label>
    <pluralLabel>Dynamic Search Data</pluralLabel>
</CustomObject>