force-app/main/default/objects/Dynamic_Search_Data__mdt/fields/Column_Data__c.field-meta.xml
<CustomField>
    <fullName>Column_Data__c</fullName>
    <description>This field holds the column data of the respective object</description>
    <label>Column Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>