force-app/main/default/objects/Dynamic_Search_Data__mdt/fields/Query_Fields__c.field-meta.xml
<CustomField>
    <fullName>Query_Fields__c</fullName>
    <description>This fields holds the Field API names of the fileds of the respective object</description>
    <label>Query Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>