force-app/main/default/objects/Dynamic_Search_Data__mdt/fields/Replace_Fields__c.field-meta.xml
<CustomField>
    <fullName>Replace_Fields__c</fullName>
    <label>Replace Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>