force-app/main/default/objects/Dynamic_Search_Data__mdt/fields/Sort_By_Options__c.field-meta.xml
<CustomField>
    <fullName>Sort_By_Options__c</fullName>
    <label>Sort By Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>